--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="assets/dist/css/bootstrap-reboot.css"/>
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css"/>
 </head>
-<body>
+<body style="background-color: #f3f3f3">
   <app-root></app-root>
 </body>
 </html>
